# stereo_pr

./: .gitignore  README.md
src/stereo_pr/: CMakeLists.txt  package.xml
src/stereo_pr/include/DBoW2/: TemplatedVocabulary.h
src/stereo_pr/include/stereo_pr/: camera.hpp  feature_tracker.hpp  node.hpp  place_recognition.hpp  pr_dbow2.hpp  pr_dbow3.hpp  stereo_pr.hpp  stereo_pr_.hpp  stereo_pr_dbow2.hpp  stereo_pr_dbow3.hpp  utils.hpp  visualizer.hpp
src/stereo_pr/src/: main.cpp  main_.cpp  main_dbow2.cpp  main_dbow3.cpp
src/stereo_pr/src/DBoW2/: FBrief.cpp  FORB.cpp
src/stereo_pr/src/DBoW3/: BowVector.cpp  Database.cpp  DescManip.cpp  FeatureVector.cpp  QueryResults.cpp  ScoringObject.cpp  Vocabulary.cpp  quicklz.c
